labels with default values no longer overlap those values

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 .app-container {
   display: flex;
   flex-direction: column;
