--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,30 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  margin-bottom: 0 !important;
+  min-width: 100vw;
+  text-align: center;
+  color: white;
+  background-color: black;
+  min-height: 50px;
+}
+
+.footer-content {
+  margin-top: 15px;
 }
